<resources>
    <string name="app_name">Manukula</string>
    <string name="app_desc">Quotes for life</string>
    <string name="logo">logo</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="bg_image">bg_image</string>
    <string name="signup">SIGNUP</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_full_name">Enter Your Full Name</string>
    <string name="e_mail">E-mail</string>
    <string name="enter_your_email_id">Enter Your Email ID</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="login">Login</string>
    <string name="login_quote">“Inspiration does exist, but it must find you working.”</string>
    <string name="next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_your_favorite_language">Choose your favorite language</string>
    <string name="choose_your_favorite_category">Choose your favorite category</string>
    <string name="lang_image">lang_image</string>
    <string name="register">Register</string>
    <string name="dont_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_with">Login With</string>
    <string name="create_your_profile">Final step, \nCreate your profile</string>
    <string name="male">Male</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="echo">Echo</string>
    <string name="profile">Profile</string>
</resources>