<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Auth.SignUpActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="600dp"
        android:contentDescription="@string/bg_image"
        android:scaleType="fitXY"
        android:alpha="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_bg" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/top_curve_bg"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_text_bold"
                    android:text="@string/signup"
                    android:textColor="@color/darkPrimaryColor"
                    android:textSize="26sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="@string/full_name"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <EditText
                    android:id="@+id/full_name_et"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="6dp"
                    android:autofillHints="name"
                    android:background="@drawable/outlined_bg"
                    android:ems="10"
                    android:hint="@string/enter_your_full_name"
                    android:inputType="textPersonName"
                    android:paddingStart="8dp"
                    android:paddingEnd="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/abc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="@string/e_mail"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/full_name_et" />

                <EditText
                    android:id="@+id/email_sign_up_et"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="6dp"
                    android:autofillHints="emailAddress"
                    android:background="@drawable/outlined_bg"
                    android:ems="10"
                    android:hint="@string/enter_your_email_id"
                    android:inputType="textEmailAddress"
                    android:paddingStart="8dp"
                    android:paddingEnd="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/abc"
                    app:layout_constraintTop_toBottomOf="@+id/abc" />


                <TextView
                    android:id="@+id/def"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="@+id/email_sign_up_et"
                    app:layout_constraintTop_toBottomOf="@+id/email_sign_up_et" />

                <EditText
                    android:id="@+id/password_sign_up_et"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="6dp"
                    android:autofillHints="password"
                    android:background="@drawable/outlined_bg"
                    android:ems="10"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:paddingStart="8dp"
                    android:paddingEnd="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/def"
                    app:layout_constraintTop_toBottomOf="@+id/def" />

                <Button
                    android:id="@+id/sign_up_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button_bg"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@+id/password_sign_up_et"
                    app:layout_constraintStart_toStartOf="@+id/password_sign_up_et"
                    app:layout_constraintTop_toBottomOf="@+id/password_sign_up_et" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/grey"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@+id/sign_up_button"
                    app:layout_constraintHorizontal_bias="0.32"
                    app:layout_constraintStart_toStartOf="@+id/sign_up_button"
                    app:layout_constraintTop_toBottomOf="@+id/sign_up_button" />

                <TextView
                    android:id="@+id/back_to_login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="@string/login"
                    android:textColor="@color/darkPrimaryColor"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView6"
                    app:layout_constraintEnd_toEndOf="@+id/sign_up_button"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textView6"
                    app:layout_constraintTop_toTopOf="@+id/textView6" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/javanese_text"
        android:gravity="center"
        android:lineHeight="22dp"
        android:text="@string/login_quote"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>